generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImGuiInputTextCallbackData.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGuiInputTextCallbackData where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void ClearSelection(ImGuiInputTextCallbackData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiInputTextCallbackData_ClearSelection"
  imGuiInputTextCallbackData_ClearSelection :: (Ptr ImGuiInputTextCallbackData) -> IO ()
-- C: void DeleteChars(ImGuiInputTextCallbackData* self, int pos, int bytes_count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiInputTextCallbackData_DeleteChars"
  imGuiInputTextCallbackData_DeleteChars :: (Ptr ImGuiInputTextCallbackData) -> CInt -> CInt -> IO ()
-- C: bool HasSelection(const ImGuiInputTextCallbackData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiInputTextCallbackData_HasSelection"
  imGuiInputTextCallbackData_HasSelection :: (Ptr ImGuiInputTextCallbackData) -> IO CBool
-- C: void InsertChars(ImGuiInputTextCallbackData* self, int pos, const char* text, const char* text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiInputTextCallbackData_InsertChars"
  imGuiInputTextCallbackData_InsertChars :: (Ptr ImGuiInputTextCallbackData) -> CInt -> CString -> CString -> IO ()
-- C: void SelectAll(ImGuiInputTextCallbackData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiInputTextCallbackData_SelectAll"
  imGuiInputTextCallbackData_SelectAll :: (Ptr ImGuiInputTextCallbackData) -> IO ()
-- C: void SetSelection(ImGuiInputTextCallbackData* self, int s, int e)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiInputTextCallbackData_SetSelection"
  imGuiInputTextCallbackData_SetSelection :: (Ptr ImGuiInputTextCallbackData) -> CInt -> CInt -> IO ()
